fix(list): allow list overflow
remove  property

fixes: #21

--- a/packages/core/src/components/list/list.scss
+++ b/packages/core/src/components/list/list.scss
@@ -4,7 +4,6 @@
 // ----------------------------------------------------------------
 
 pop-list {
-  contain: content;
   flex-wrap: wrap;
   width: 100%;
 
